[metadata]
name = MFQuery
author = Paola Petrelli 
author-email = paola.petrelli@utas.edu.au
summary = Mediaflux Query tools to use with data from the Weather@Home project
description-file = README.md
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages = 
    MFQuery
package-data =
    MFQuery = data/*

[pbr]
autodoc_tree_index_modules = True

[extras]
# Optional dependencies
dev = 
    pytest
    sphinx
    recommonmark
    mock

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tool:pytest]
addopts = --doctest-modules --ignore examples --ignore database_updates --doctest-glob='*.rst'
